force-app/main/default/objects/ADM_Release_Event__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <formula>Release__r.Application__r.Name</formula>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>