force-app/main/default/objects/ADM_Release_Event__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>The Application Type of the Application of the Release which this Release Event is associated with.</description>
    <formula>TEXT(Release__r.Application__r.Application_Type__c)</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>