force-app/main/default/objects/ADM_Release_Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <description>Preview: Event record has not yet been created for this Release Event
Planned: Event record has been created</description>
    <inlineHelpText>&quot;Preview&quot; events are not committed and do not appear in the calendar. &quot;Planned&quot; events appear as scheduled in the calendar.</inlineHelpText>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preview</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>