force-app/main/default/objects/ADM_Release_Event__c/fields/Origination__c.field-meta.xml
<CustomField>
    <fullName>Origination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Release Event Template from which this Release Event originated.</description>
    <label>Origination</label>
    <referenceTo>ADM_Release_Event_Template__c</referenceTo>
    <relationshipLabel>Release Events</relationshipLabel>
    <relationshipName>Release_Events</relationshipName>
    <type>Lookup</type>
</CustomField>