force-app/main/default/objects/ADM_Release_Event__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>Release to which this Release Event is associated.</description>
    <inlineHelpText>Release to which this Release Event is associated.</inlineHelpText>
    <label>Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipLabel>Release Events</relationshipLabel>
    <relationshipName>Release_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>