force-app/main/default/objects/ADM_Release_Event__c/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <formula>Release__r.Name</formula>
    <label>Release Name</label>
    <type>Text</type>
</CustomField>