force-app/main/default/objects/ADM_Release_Event__c/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <description>The Release Type of the Release this Release Event is associated with.</description>
    <formula>TEXT(Release__r.Release_Type__c)</formula>
    <label>Release Type</label>
    <type>Text</type>
</CustomField>