force-app/main/default/objects/ADM_Release_Event__c/fields/Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_End__c</fullName>
    <description>Scheduled End for the Release Event</description>
    <inlineHelpText>Scheduled end time of the Release Event.</inlineHelpText>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>