force-app/main/default/objects/ADM_Release_Event__c/fields/Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start__c</fullName>
    <description>Start time of the Release Event</description>
    <inlineHelpText>Scheduled start time of the Release Event</inlineHelpText>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>