force-app/main/default/objects/ADM_Release_Event__c/validationRules/End_Time_cannot_be_before_Start_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_cannot_be_before_Start_Time</fullName>
    <active>true</active>
    <errorConditionFormula>Scheduled_Start__c &gt; Scheduled_End__c</errorConditionFormula>
    <errorDisplayField>Scheduled_End__c</errorDisplayField>
    <errorMessage>Event End Time cannot be before Start Time.</errorMessage>
</ValidationRule>