force-app/main/default/objects/ADM_Release_Event__c/validationRules/End_Time_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Time_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Scheduled_End__c)</errorConditionFormula>
    <errorDisplayField>Scheduled_End__c</errorDisplayField>
    <errorMessage>Event End Time must be set.</errorMessage>
</ValidationRule>