force-app/main/default/objects/ADM_Release_Event__c/validationRules/Start_Time_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Time_must_be_set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Scheduled_Start__c)</errorConditionFormula>
    <errorDisplayField>Scheduled_Start__c</errorDisplayField>
    <errorMessage>Event Start Time must be set.</errorMessage>
</ValidationRule>